# CBCT_Sino_FOV

./: .gitignore  .gitmodules  README.md  pyproject.toml  requirements.txt  setup.py
configs/: compare_metrics.yml  compare_show.yml  compare_show_i2sb_roi.yml  compare_show_pconv_roi.yml  eval.yaml  sample_diffusion.yaml  sample_i2sb_local.yaml  sample_i2sb_local_multi.yaml  train_diffusion.yaml  train_i2sb_dummy.yaml  train_i2sb_local.yaml  train_i2sb_local_multi.yaml  train_unet.yaml  train_unet_pconv.yaml
ct_proj_fix.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ctprojfix.egg-info/: PKG-INFO  SOURCES.txt
ctprojfix/data/: dataset.py
ctprojfix/evals/: metrics.py
ctprojfix/losses/: criterion.py
ctprojfix/models/: i2sb_unet.py  pconv_unet.py  registry.py  unet.py  unet_res.py
ctprojfix/models/diffusion/: ddpm.py  sampler.py
ctprojfix/recon/: __init__.py  fdk_astra.py  wce_baseline.py  wce_hsieh.py
ctprojfix/trainers/: diffusion.py  i2sb_local.py  i2sb_local_multi.py  supervised.py
scripts/: check_data_units.py  eval_recon3d_from_outputs.py  eval_recon3d_from_outputs_roi.py  evaluate.py  i2sb_train.py  make_compare_figs.py  make_compare_figs_roi.py  make_compare_metrics.py  plot_train_log.py  sample_diffusion.py  sample_i2sb_local.py  sample_i2sb_local_multi.py  split_dataset.py  summarize_metrics.py  train.py  tree_show.py
splits/: debug_train.txt  train.txt
